<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="equalSign">=</string>
    <string name="plusSign">+</string>
    <string name="minusSign">-</string>
    <string name="timesSign">x</string>
    <string name="divideSign">/</string>
    <string name="numberZero">0</string>
    <string name="numberOne">1</string>
    <string name="numberTwo">2</string>
    <string name="numberThree">3</string>
    <string name="numberFour">4</string>
    <string name="numberFive">5</string>
    <string name="numberSix">6</string>
    <string name="numberSeven">7</string>
    <string name="numberEight">8</string>
    <string name="numberNine">9</string>
    <string name="clearSign">CLEAR</string>
    <string name="numberView">TextView</string>
</resources>